5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1679_1105.log
== TEST (2019-04-19 20:40:29) 
-- CODE:
x = input("Brasão: ")
if(x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
	if(x == "lobo"):
		print("Entrada:", x)
		print("Casa: Stark")
		
-- ERROR:
File "XXXX", line 2
    if(x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
                                                                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:41:27) 
-- CODE:
x = input("Brasão: ")
if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
	if(x == "lobo"):
		print("Entrada:", x)
		print("Casa: Stark")
		
-- ERROR:
File "XXXX", line 2
    if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
                                                                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 21:08:05) 
-- CODE:
x = input("Brasão: ")
if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
	if(x == "lobo"):
		print("Entrada:", x)
		print("Casa: Stark")
		
-- ERROR:
File "XXXX", line 2
    if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
                                                                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:19:50) 
-- CODE:
x = input("Brasão: ")
if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
	if(x == "lobo"):
		print("Entrada:", x)
		print("Casa: Stark")
		
-- ERROR:
File "XXXX", line 2
    if (x == "lobo" or x == "leao" or x == "veado" or x == "dragao" or x == "rosa" or x == "sol" or x == "lula" or x == "esfolado" or x = "turta"):
                                                                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:18:00) 
-- CODE:
x = input("Brasão: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
print("Entrada:", x)
print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 22
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:18:55) 
-- CODE:
x = input("Brasão: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 22
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:19:14) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 22
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:21:08) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
		print("Entrada:", x)
		print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 20
    print("Entrada:", x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:21:26) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
	print("Entrada:", x)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.178127
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:

-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:21:29) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
elif (x == "leao"):
	c = "Lannister"
elif (x == "veado"):
	c = "Baratheon"
elif (x == "dragao"):
	c = "Targaryen"
elif (x == "rosa"):
	c = "Tyrell"
elif (x == "sol"):
	c = "Martell"
elif (x == "lula"):
	c = "Greyjoy"
elif (x == "esfolado"):
	c = "Bolton"
elif (x == "turta"):
	c = "Tully"
	print("Entrada:", x)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 20
    print("Entrada:", x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 13:23:44) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "leao"):
	c = "Lannister"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "veado"):
	c = "Baratheon"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "dragao"):
	c = "Targaryen"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "rosa"):
	c = "Tyrell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "sol"):
	c = "Martell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "lula"):
	c = "Greyjoy"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "esfolado"):
	c = "Bolton"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "turta"):
	c = "Tully"
	print("Entrada:", x)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:24:02) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "leao"):
	c = "Lannister"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "veado"):
	c = "Baratheon"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "dragao"):
	c = "Targaryen"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "rosa"):
	c = "Tyrell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "sol"):
	c = "Martell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "lula"):
	c = "Greyjoy"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "esfolado"):
	c = "Bolton"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "turta"):
	c = "Tully"
	print("Entrada:", x)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.119428
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 13:24:57) 
-- CODE:
x = input("Brasao: ")
if (x == "lobo"):
	c = "Stark"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "leao"):
	c = "Lannister"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "veado"):
	c = "Baratheon"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "dragao"):
	c = "Targaryen"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "rosa"):
	c = "Tyrell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "sol"):
	c = "Martell"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "lula"):
	c = "Greyjoy"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "esfolado"):
	c = "Bolton"
	print("Entrada:", x)
	print("Casa:", c)
elif (x == "turta"):
	c = "Tully"
	print("Entrada:", x)
	print("Casa:", c)
else:
	print("Entrada:", x)
	print("Brasao invalido")
-- EXECUTION TIME:
0.127979
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
